Calendar min and max date set, z-index fixed

--- a/client/2do/src/components/Header/Header.module.scss
+++ b/client/2do/src/components/Header/Header.module.scss
@@ -2,9 +2,9 @@
 
 .headerComponentWrapper {
   top: 0;
-  z-index: 100;
   height: 70px;
   padding: 20px;
+  z-index: $zIdxHeader;
   @include maxFixedWidth();
   margin-bottom: -1px;
   background-color: $red;
